# basketball-vision-analyser

./: .gitignore  README.md  pyproject.toml
docs/: MILESTONES.md  USAGE.md
examples/: run_local_yolo_detection.py  run_mock_pipeline_demo.py  run_real_clip_yolo_demo.py
scripts/: create_demo_video.py
src/basketball_vision_analyser/: __init__.py
src/basketball_vision_analyser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_package_import.py
tests/analytics/: test_analyzer.py  test_config.py  test_movement.py  test_result.py
tests/classification/: test_assignment.py  test_color_team_classifier.py  test_config.py  test_result.py
tests/court/: test_config.py  test_geometry.py  test_homography.py  test_keypoints.py  test_tactical_view.py
tests/detection/: test_bounding_box.py  test_config.py  test_detection.py  test_factory.py  test_local_yolo_detector.py  test_mock_detector.py  test_result.py  test_roboflow_config.py  test_roboflow_detector.py  test_types.py  test_yolo_config.py
tests/events/: test_config.py  test_detector.py  test_event.py  test_result.py
tests/examples/: test_demo_scripts.py
tests/pipeline/: test_analyzer.py  test_frame_result.py
tests/possession/: test_assignment.py  test_config.py  test_estimator.py  test_result.py
tests/tracking/: test_ball_interpolator.py  test_result.py  test_simple_tracker.py  test_track.py  test_tracking_config.py
tests/video/: conftest.py  test_exceptions.py  test_frame_iterator.py  test_loader.py  test_metadata.py  test_video_pipeline.py  test_writer.py
(+63 files in other folders)
