
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basketball-vision-analyser"
version = "0.1.0"
description = "Basketball video analysis system using YOLO, OpenCV, tracking, team assignment, possession detection, and tactical visualization."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Arjun Kasturi" }
]
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "black>=26.0.0",
    "mypy>=2.0.0",
]

ai = [
    "ultralytics>=8.3.0",
    "roboflow>=1.1.0",
    "inference-sdk>=0.9.0",
    "transformers>=4.45.0",
    "torch>=2.3.0",
    "pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
